API added for json